--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" class="h-100">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Carlos Cueto's Web Site</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Custom styles -->
+    <!-- link href="custom.css" rel="stylesheet"> -->
+</head>
+
+<body class="h-100 text-white bg-dark">
+    <div class="h-100 d-flex flex-column">
+        <div class="h-100 w-100 d-flex align-items-center justify-content-center text-center">
+            <main class="">
+                <h1>We're revamping our website</h1>
+                <p class="">Stay tuned for more information</p>
+              </main>
+        </div>
+    </div>
+    
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
+</html>
